--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </h1>   
     <div class="header" id="myHeader">
     <nav>
-        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://wa.me/6281213653426?text=Halo Rio Pranata">WhatsApp</a>
-        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://www.linkedin.com/in/rio-pranata-a2603820b/">Linkedin</a>
-        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="mailto:rioprnt26@gmail.com">Gmail</a>
-        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://www.instagram.com/riopranatar/">Instagram</a>
+        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://wa.me/6281213653426?text=Halo Rio Pranata" target="_blank">WhatsApp</a>
+        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://www.linkedin.com/in/rio-pranata-a2603820b/" target="_blank">Linkedin</a>
+        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="mailto:rioprnt26@gmail.com" target="_blank">Gmail</a>
+        <a class="vucLYzCMj0PKGjv7iMw9Aw" href="https://www.instagram.com/riopranatar/" target="_blank">Instagram</a>
       </nav>      
     </div>
 </div>
@@ -86,20 +86,20 @@
 <h3 id="section-title">Work experience</h3>
            <div class="we">
             <div class="wed">
-              <a href="https://moladin.com/">
+              <a href="https://moladin.com/" target="_blank">
               <img src="./moladin.png" style="width:150px; padding-top: 30px;
             width: 110px; height: 40px;"></a>
               <pre>11/2021 - 02/2023</pre>
 <p>Product Analyst (Full time employee)</p>
 <p>PT MOLADIN DIGITAL INDONESIA</p>
 </div>
-<div class="wed"><a href="https://prosia.co.id/">
+<div class="wed"><a href="https://prosia.co.id/" target="_blank">
   <img src="./prosia.png" style="width:100px; padding-top: 30px;
 width: 90px; height: 40px;"></a>
   <pre>04/2019 - 02/2021</pre>
 <p>Technical Support (Contract)</p><p>PT PRO SISTEMATIKA AUTOMASI</p>
 </div>
-<div class="wed"><a href="https://www.binatalenta.co.id/">
+<div class="wed"><a href="https://www.binatalenta.co.id/" target="_blank">
   <img src="./bt.png" style="width:100px; padding-top: 30px;
 width: 90px; height: 40px;"></a>
   <pre>01/2017 - 06/2018</pre>
