--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               <a href="https://moladin.com/" target="_blank">
               <img src="./moladin.png" style="width:150px; padding-top: 30px;
             width: 110px; height: 40px;"></a>
-              <pre>03/2021 - 02/2023</pre>
-<p>Product Analyst (Full-time employee)</p>
+              <pre>03/2021 - 12/2023</pre>
+<p>Product Owner (Full-time employee)</p>
 <p>PT MOLADIN DIGITAL INDONESIA</p>
 </div>
 <div class="wed"><a href="https://prosia.co.id/" target="_blank">
